# C-_Web

hw1/: CMakeLists.txt
hw1/include/: Game.h
hw1/src/: Game.cpp  Player.cpp
hw2/: CMakeLists.txt
hw2/include/: Player.h
hw2/src/: main.cpp
hw3/: AIPlayer.cpp  AIPlayer.h  CMakeLists.txt  Game.cpp  Game.h  HumanPlayer.cpp  HumanPlayer.h  Player.cpp  Player.h  main.cpp
